<?xml version="1.0"?>
<package format="3">
  <name>my_rviz_plugin</name>
  <version>0.0.0</version>
  <description>A custom RViz2 plugin for enhanced visualization.</description>
  <maintainer email="devopspractice005@outlook.com">cporeddy</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>pluginlib</depend>
  <depend>qt5</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="true"/>
  </export>
</package>
