<?xml version="1.0"?>
<package format="3">
  <name>my_rviz_plugin</name>
  <version>0.1.0</version>
  <description>A custom RViz plugin example</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rviz_common</build_depend>
  <build_depend>rviz_rendering</build_depend>
  <build_depend>qtbase5-dev</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_rendering</exec_depend>
  <exec_depend>qtbase5-dev</exec_depend>
</package>
